Fix CVEs, upgrade JDK to 17, fix build issues